fix html title + scrollbar visibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background-color: #ffffff;
+    margin: 0;
+    overflow: hidden;
+    font-family: goodTimesRG;
+}
+
 .loader{
     position: absolute;
     width: 100%;
